--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
     "framer-motion": "^11.0.3",
-    "gsap": "^3.12.2",
+    "gsap": "^3.14.2",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next": "16.0.10",
@@ -59,8 +59,10 @@
     "react-day-picker": "9.8.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.60.0",
+    "react-just-parallax": "^3.1.16",
     "react-markdown": "10.1.0",
     "react-resizable-panels": "^2.1.7",
+    "react-simple-typewriter": "^5.0.1",
     "recharts": "2.15.4",
     "sonner": "^1.7.4",
     "tailwind-merge": "^3.3.1",
